modified : All files and Images added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>My Website</title>
-<h1>This is WORKING!!</h1>
-<h2> My name is Mihir Sontake</h2>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>University of Limerick, IIT Madras Graduate - Mihir Sontake - Software Developer - Ex Citibank</title>
+    <link rel="stylesheet" href="Stylesheets/styles.css">
 </head>
-<body></body>
+<body>
+    <header>
+        <h1>Mihir Sontake</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Pages/about.html">About Me</a></li>
+                <li><a href="Pages/portfolio.html">Portfolio</a></li>
+                <li><a href="Pages/resume.html">Resume/CV</a></li>
+                <li><a href="Pages/awards.html">Awards/Academic Achievements</a></li>
+                <li><a href="Pages/contact.html">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="container">
+            <div id="profile-section">
+                <iframe src="Pages/profile.html" width="100%" height="100%" frameborder="0"></iframe>
+            </div>    
+        <div id="content-section">
+        <section class="project">
+            <h2>Welcome to My Portfolio</h2>
+            <p>I'm a Graduate Student at University of Limerick in Software Engineering and Data Analytics. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+        </section>
+        <div style="height: 258px;"></div>
+    </div>
+    </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 Mihir Sontake - All rights reserved.</p>
+    </footer>
+</body>
 </html>
