modified:   Images/NewProfileMihir.jpg

--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -8,9 +8,9 @@
 </head>
 <body>
         <div id="profile-content">
-            <img src="../Images/ImageCropped1.jpg" alt="Mihir Sontake" id="profile-picture"><br>
+            <img src="../Images/NewProfileMihir.jpg" alt="Mihir Sontake" id="profile-picture"><br>
             <span style="font-weight: bold;">Mihir Sontake</span><br>
-            <span style="font-size: 15px;">Graduate Student, University of Limerick</span>
+            <span style="font-size: 13px;">Graduate Student, University of Limerick</span>
             <div class="social-links">
                 
                 <div class="social-text"><a><img src = "../Images/pin.png" alt = "Location">Limerick, Ireland</a><br></div>
