modified: added portfolio website to porfolio.html

--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -27,6 +27,13 @@
                 <iframe src="profile.html" width="100%" height="100%" frameborder="0"></iframe>
             </div>
             <div id="content-section">
+        
+        <section class="project">
+            <h2>Portfolio Website</h2>
+            <p>My personal website! This site showcases my portfolio, resume/CV, projects, and background. This site was built using GitHub Pages.</p>
+            <a href="https://github.com/mihson95/mihson95.github.io">GitHub Link</a>
+        </section>
+
         <section class="project">
             <h2>Migrating Monolith Application to Microservices Architecture</h2>
             <p>I was responsible for migrating a Monolithic Application to 13 Microservices for my organization. To achieve this, I implemented microservices design patterns, namely the Service Discovery Pattern and the API Gateway Pattern. For Service Discovery, the application used a Eureka Server. The API Gateway was developed using Spring Cloud Gateway framework, which helped in managing external API calls. I also ensured Error Handling was implemented in the API Gateway. Finally, for non-blocking API calls, the API Gateway used Spring WebFlux. I achieved high scalability and lowered latency in API calls by 67%.</p>
