modified:   Pages/about.html modified:   Pages/resume.html

--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -20,11 +20,10 @@
             </ul>
         </nav>
     </header>    
-        <h1 id ="name">Mihir Sontake</h1>
-        <div id ="job-title">Graduate Student, University of Limerick</div>
+        <h1 id ="name">MIHIR SONTAKE</h1>
+        <div id ="job-title" style="font-size: 22px"><b>SENIOR JAVA DEVELOPER</b></div>
         <address>
-            12 01, Heather House, Cappavilla Village,<br>
-            University of Limerick, Limerick – V94 KTX3<br>
+            Address: University of Limerick, Limerick, Ireland<br>
             <a href="https://linkedin.com/in/mihir-sontake">LinkedIn</a> | 
             <a href="mailto:sontakemihir@gmail.com">sontakemihir@gmail.com</a> | 
             <a href="https://github.com/mihson95">GitHub</a> | 
@@ -36,15 +35,14 @@
         <section id="skills">
             <h2>SKILLS</h2>
             <ul>
-                <li>Java 11, 8 | Spring Boot | Spring Cloud | Git | GitHub | BitBucket | JavaScript | Angular | TDD | OOP</li>
-                <li>REST APIs | Spring Data JPA | Spring Security | JWT</li>
-                <li>Postman | Azure DevOps | TeamCity</li>
-                <li>JUnit | Mockito | Code Coverage</li>
-                <li>Databases | SQL | PostgreSQL | MySQL | DBeaver</li>
-                <li>Microservices | System Design</li>
-                <li>Agile Scrum</li>
-                <li>SOLID | Design Patterns | Backend | Fullstack</li>
-                <li>Data Structures and Algorithms</li>
+                <li>Backend: Java 11, 8 | Spring Boot | Spring Cloud | REST APIs | Spring Data JPA | Spring Security | Postman</li>
+                <li>Fullstack: Angular | JavaScript</li>
+                <li>Cloud: Spring Cloud Gateway | Microservices | Netflix Eureka Server</li>
+                <li>Testing: JUnit | Mockito | Code Coverage | Test Driven Development | SonarQube</li>
+                <li>Databases: SQL | PostgreSQL | MySQL | DBeaver</li>
+                <li>Version Control: Git | GitHub | BitBucket | Azure DevOps</li>
+                <li>Miscellaneous: SOLID | Design Patterns | DSA | Low Level Design | High Level Design</li>
+
             </ul>
         </section>
         
@@ -91,7 +89,7 @@
         <section id="education">
             <h2>EDUCATION</h2>
             <ul>
-                <li>Graduating 09/2024: Master of Software Engineering and Data Analytics, University of Limerick – Limerick, Ireland</li>
+                <li>Graduating 09/2024: Master of Science in Software Engineering and Data Analytics, University of Limerick – Limerick, Ireland</li>
                 <li>07/2013 - 07/2017: Bachelor of Technology, Indian Institute of Technology Madras – Chennai, India</li>
             </ul>
         </section>
