modified education in resume

--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -90,6 +90,7 @@
             <h2>EDUCATION</h2>
             <ul>
                 <li>Graduating 09/2024: Master of Science in Software Engineering and Data Analytics, University of Limerick – Limerick, Ireland</li>
+                <li>08/2021 - 08/2023: Postgraduate Diploma, Scaler Academy</li>
                 <li>07/2013 - 07/2017: Bachelor of Technology, Indian Institute of Technology Madras – Chennai, India</li>
             </ul>
         </section>
