redesign the website look and feel

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -22,14 +22,11 @@
     </header>
     <main>
         <div class="container">
-            <div id="profile-section">
-                <iframe src="profile.html" width="100%" height="100%" frameborder="0"></iframe>
-            </div>    
         <div id="content-section">
             <section class="project">
                 <h2>Contact Me</h2>
-                <div>I am always interested to learn about new opportunities in software development in Backend, Distributed Systems, or FinTech space.</div>
-                <div>Feel free to connect with me on <a href="https://www.linkedin.com/in/mihir-sontake/">LinkedIn</a>, or <a href="https://github.com/mihson95">GitHub</a>, or drop me an email at <a href="mailto:sontakemihir@gmail.com">sontakemihir@gmail.com (my personal email)</a>.</div>
+                <p>I am always interested to learn about new opportunities in software development in organisations where I can meaningfully contribute. I am actively exploring opportunities in Ireland and rest of Europe. I specialise in Backend Development in Java and Spring Boot especially creating REST APIs.</p>
+                <p>Feel free to connect with me if you think I can contribute meaningfully to your organisation on <a href="https://www.linkedin.com/in/mihir-sontake/">LinkedIn</a> or drop me an email at <a href="mailto:sontakemihir@gmail.com">sontakemihir@gmail.com</a>.</p>
                 
             </section>
             <div style="height: 262px;"></div>
