--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div id="profile-section">
-                <iframe src="Pages/profile.html" width="100%" height="100%" frameborder="0"></iframe>
-            </div>    
+        <div class="container">   
         <div id="content-section">
         <section class="project">
-            <h2>Welcome to My Portfolio</h2>
-            <p>I'm a Graduate Student at University of Limerick in Software Engineering and Data Analytics. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+            <h2>Welcome to My Portfolio!</h2>
+            <p>Thanks for landing at my website. I'm currently studying as a Graduate Masters Student at University of Limerick in Software Engineering and Data Analytics. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+            <p>I am a self-taught programmer. I was a Senior Java Developer in my last organisation. To directly go to my experience and skills <a href = "Pages/resume.html">click here!</a></p>
+            <p>For any job opportunities recruiters can <a href= "Pages/contact.html">click here!</a></p>
         </section>
         <div style="height: 258px;"></div>
     </div>
