--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - Mihir Sontake</title>
     <link rel="stylesheet" href="../Stylesheets/styles.css">
+    <link rel="icon" href="../Images/favicon.png" type="image/x-icon">
 </head>
 <body>
         <div id="profile-content">
