profile circle cover

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -22,12 +22,15 @@
         </nav>
     </header>
     <main>
+        <div class="circle-container">
+            <img src="../Images/Profile.jpg" alt="My Picture" class="profile-picture">
+        </div>
         <div class="container">
         <div id="content-section">
             <section class="project">
                 <h2>Contact Me</h2>
                 <p>I am always interested to learn about new opportunities in software development in organisations where I can meaningfully contribute. I am actively exploring opportunities in Ireland and rest of Europe. I specialise in Backend Development in Java and Spring Boot especially creating REST APIs.</p>
-                <p>Feel free to connect with me if you think I can contribute meaningfully to your organisation on <a href="https://www.linkedin.com/in/mihir-sontake/">LinkedIn</a> or drop me an email at <a href="mailto:sontakemihir@gmail.com">sontakemihir@gmail.com</a>.</p>
+                <p>Feel free to connect with me if you think I can contribute meaningfully to your organisation, based out of Ireland, any country in European Union, or Unites States of America on <a href="https://www.linkedin.com/in/mihir-sontake/">LinkedIn</a> or drop me an email at <a href="mailto:sontakemihir@gmail.com">sontakemihir@gmail.com</a>.</p>
                 
             </section>
             <div style="height: 262px;"></div>
