--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -22,6 +22,9 @@
         </nav>
     </header>    
     <main>
+        <div class="circle-container">
+            <img src="../Images/Profile.jpg" alt="My Picture" class="profile-picture">
+        </div>
         <h1 id ="name">MIHIR SONTAKE</h1>
         <div id ="job-title" style="font-size: 22px"><b>SENIOR JAVA DEVELOPER</b></div>
         <address>
@@ -37,7 +40,7 @@
         <section id="skills">
             <h2>SKILLS</h2>
             <ul>
-                <li><b>Backend:</b> Java 11, 8 | Spring Boot | Spring Cloud | REST APIs | Spring Data JPA | Spring Security | Postman</li>
+                <li><b>Backend:</b> Java 11, 8 | Spring Boot | OOP | OOAD | REST APIs | Spring Data JPA | Spring Security | JWT | Postman</li>
                 <li><b>Fullstack:</b> Angular | JavaScript</li>
                 <li><b>Cloud:</b> Spring Cloud Gateway | Microservices | Netflix Eureka Server</li>
                 <li><b>Testing:</b> JUnit | Mockito | Code Coverage | Test Driven Development | SonarQube</li>
