--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </nav>
     </header>
     <main>
+        <div class="circle-container">
+            <img src="Images/Profile.jpg" alt="My Picture" class="profile-picture">
+        </div>
         <div class="container">   
         <div id="content-section">
         <section class="project">
