--- a/Pages/awards.html
+++ b/Pages/awards.html
@@ -23,6 +23,9 @@
     </header>
 
     <main>
+        <div class="circle-container">
+            <img src="../Images/Profile.jpg" alt="My Picture" class="profile-picture">
+        </div>
         <div class="container"> 
         <div id="content-section">
         <section class="project">
