modified about me.adding resume PDF files.adding footer and education.

--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -14,8 +14,9 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Projects</a></li>
                 <li><a href="resume.html">Resume/CV</a></li>
+                <li><a href="education.html">Education</a></li>
                 <li><a href="awards.html">Awards/Academic Achievements</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
@@ -52,7 +53,7 @@
         </section>
         
         <section id="experience">
-            <h2>EXPERIENCE</h2>
+            <h2 id = "experience">EXPERIENCE</h2>
             <div class="job">
                 <h3>Senior Java Developer, Rosmerta Technologies Ltd. – Gurugram, India</h3>
                 <p><strong>01/2022 – 08/2023</strong></p>
@@ -102,7 +103,26 @@
     </main>
     
     <footer>
+        <div class = "contact_two_columns">
+            <div class = "google_maps_column">
+                <li id = "map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2418.938559774907!2d-8.56862602405727!3d52.679147272103314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b5e911909412d%3A0xaf312b08d99b2334!2sApartment%205%2C%20Heather%2C%20Cappavilla%20Student%20Village%2C%20Garraun%2C%20Limerick%2C%20Co.%20Clare!5e0!3m2!1sen!2sie!4v1712107550663!5m2!1sen!2sie" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+            </div>
+            <div class="contact_info_column">   
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank"><img src="../Images/lin.png" alt = "LinkedIn"></a></li>
+                    <li><a href="https://github.com/mihson95/" target="_blank"><img src="../Images/git.png" alt="GitHub"></a></li>
+                    <li><img src="../Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
+                    <li><img src="../Images/phone.png" alt="Phone">+353 89 202 6305</li>
+                    <li><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</li>
+                </ul>
+            </div>
+        </div>
         <p>&copy; 2024 Mihir Sontake - All rights reserved.</p>
+        <div class="up-arrow-container">
+            <a href="#">
+                <img src="../Images/uparrow.png" alt="Scroll to top">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
