--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Pages/about.html">About Me</a></li>
-                <li><a href="Pages/portfolio.html">Portfolio</a></li>
+                <li><a href="Pages/portfolio.html">Projects</a></li>
                 <li><a href="Pages/resume.html">Resume/CV</a></li>
+                <li><a href="Pages/education.html">Education</a></li>
                 <li><a href="Pages/awards.html">Awards/Academic Achievements</a></li>
                 <li><a href="Pages/contact.html">Contact Me</a></li>
             </ul>
@@ -28,17 +29,38 @@
         <div class="container">   
         <div id="content-section">
         <section class="project">
-            <h2>Welcome to My Portfolio!</h2>
-            <p>Thanks for landing at my website. I'm currently studying as a Graduate Masters Student at University of Limerick in Software Engineering and Data Analytics. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
-            <p>I am a self-taught programmer. I was a Senior Java Developer in my last organisation. To directly go to my experience and skills <a href = "Pages/resume.html">click here!</a></p>
-            <p>For any job opportunities recruiters can <a href= "Pages/contact.html">click here!</a></p>
+            <h2>Welcome to my Website.</h2>
+            <h2>I'm Mihir Sontake</h2>
+            <p>I'm currently a Student of Masters of Science in Software Engineering and Data Analytics at University of Limerick. I was a Senior Java Developer in my last organisation. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+            <p>To go to my expertise in skills <a href="Pages/about.html#skills">click here!</a></p>
+            <p>To go to my work experience <a href = "Pages/resume.html#experience">click here!</a></p>
+            <p>To access my resumes (1 page and 2 page) <a href = "Pages/about.html#resumes">click here!</a></p>
+            <p>For any job opportunities recruiters can <a href= "Pages/contact.html">contact me!</a></p>
         </section>
-        <div style="height: 258px;"></div>
     </div>
     </div>
     </main>
     <footer>
+        <div class = "contact_two_columns">
+            <div class = "google_maps_column">
+                <li id = "map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2418.938559774907!2d-8.56862602405727!3d52.679147272103314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b5e911909412d%3A0xaf312b08d99b2334!2sApartment%205%2C%20Heather%2C%20Cappavilla%20Student%20Village%2C%20Garraun%2C%20Limerick%2C%20Co.%20Clare!5e0!3m2!1sen!2sie!4v1712107550663!5m2!1sen!2sie" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+            </div>
+            <div class="contact_info_column">   
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank"><img src="Images/lin.png" alt = "LinkedIn"></a></li>
+                    <li><a href="https://github.com/mihson95/" target="_blank"><img src="Images/git.png" alt="GitHub"></a></li>
+                    <li><img src="Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
+                    <li><img src="Images/phone.png" alt="Phone">+353 89 202 6305</li>
+                    <li><img src="Images/email.png" alt="Email">sontakemihir@gmail.com</li>
+                </ul>
+            </div>
+        </div>
         <p>&copy; 2024 Mihir Sontake - All rights reserved.</p>
+        <div class="up-arrow-container">
+            <a href="#">
+                <img src="Images/uparrow.png" alt="Scroll to top">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
