--- a/Pages/education.html
+++ b/Pages/education.html
@@ -29,12 +29,27 @@
         <div class="container">
         <div id="content-section">
             <section class="project">
-                <h2>Contact Me</h2>
-                <p>I am interested in learning about new opportunities to work as a software developer in organisations where I can meaningfully contribute. I am actively exploring opportunities in Ireland and the rest of Europe. I specialise in Backend Development in Java and Spring Boot especially creating REST APIs.</p>
-                <p>Feel free to connect with me if you think I can contribute meaningfully to your organisation, based out of Ireland (remote or on-site), any country in the European Union (remote or on-site), or the United States of America (remote only).</p>
-                <p>My LinkedIn Profile is <a href="https://www.linkedin.com/in/mihir-sontake/">here.</a></p>
-                <p>My email Id is <a href="mailto:sontakemihir@gmail.com">here.</a></p>
-                <p>My GitHub account is <a href="https://github.com/mihson95">here.</a></p>
+                <div class="two-columns-education">
+                    <div class="column-institute-name">
+                        <h3>Master of Science (M.Sc) in Software Engineering from University of Limerick</h3>
+                        <p><b>2023-2024</b></p>
+                        <p>Software Engineering, Data Analytics</p>
+                    </div>
+                    <div class="column-institute-logo">
+                        <img src="../Images/ul.jpg">
+                    </div>
+                </div>
+            </section>
+            <section class="project">
+                <div class="two-columns-education">
+                    <div class="column-institute-name">
+                        <h3>Bachelor of Technology (B.Tech) from Indian Institute of Technology Madras</h3>
+                        <p>2013-2017</p>
+                    </div>
+                    <div class="column-institute-logo">
+                        <img src="../Images/iitm.png">
+                    </div>
+                </div>
             </section>
         </div>
     </div>
