adjust for mobile screen.adding js for smooth transition.delete resumestyles.css.adjust styling.

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -32,9 +32,6 @@
                 <h2>Contact Me</h2>
                 <p>I am interested in learning about new opportunities to work as a software developer in organisations where I can meaningfully contribute. I am actively exploring opportunities in Ireland and the rest of Europe. I specialise in Backend Development in Java and Spring Boot especially creating REST APIs.</p>
                 <p>Feel free to connect with me if you think I can contribute meaningfully to your organisation, based out of Ireland (remote or on-site), any country in the European Union (remote or on-site), or the United States of America (remote only).</p>
-                <p>My LinkedIn Profile is <a href="https://www.linkedin.com/in/mihir-sontake/">here.</a></p>
-                <p>My email Id is <a href="mailto:sontakemihir@gmail.com">here.</a></p>
-                <p>My GitHub account is <a href="https://github.com/mihson95">here.</a></p>
             </section>
         </div>
     </div>
@@ -50,16 +47,15 @@
                     <li><a href="https://github.com/mihson95/" target="_blank"><img src="../Images/git.png" alt="GitHub"></a></li>
                     <li><img src="../Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
                     <li><img src="../Images/phone.png" alt="Phone">+353 89 202 6305</li>
-                    <li><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</li>
+                    <li><a href="mailto:sontakemihir@gmail.com" style="color: #B2BEB5"><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                 </ul>
             </div>
         </div>
         <p>&copy; 2024 Mihir Sontake - All rights reserved.</p>
         <div class="up-arrow-container">
-            <a href="#">
-                <img src="../Images/uparrow.png" alt="Scroll to top">
-            </a>
+            <button onclick="scrollToTop()"><img src="../Images/uparrow.png" alt="Scroll to top"></button>
         </div>
     </footer>
+    <script src="../Javascript/script.js"></script>
 </body>
 </html>
