--- a/Pages/education.html
+++ b/Pages/education.html
@@ -31,8 +31,8 @@
             <section class="project">
                 <div class="two-columns-education">
                     <div class="column-institute-name">
-                        <h3>Master of Science (M.Sc) in Software Engineering from University of Limerick</h3>
-                        <p><b>2023-2024</b></p>
+                        <h3>University Of Limerick (UL)</h3>
+                        <h3>Master of Science (M.Sc) in Software Engineering 2023-2024</h3>
                         <p>Software Engineering, Data Analytics</p>
                     </div>
                     <div class="column-institute-logo">
@@ -43,8 +43,8 @@
             <section class="project">
                 <div class="two-columns-education">
                     <div class="column-institute-name">
-                        <h3>Bachelor of Technology (B.Tech) from Indian Institute of Technology Madras</h3>
-                        <p>2013-2017</p>
+                        <h3>Indian Institute of Technology Madras (IITM)</h3>
+                        <h3>Bachelor of Technology (B.Tech) 2013 -2017</h3>
                     </div>
                     <div class="column-institute-logo">
                         <img src="../Images/iitm.png">
@@ -65,16 +65,15 @@
                     <li><a href="https://github.com/mihson95/" target="_blank"><img src="../Images/git.png" alt="GitHub"></a></li>
                     <li><img src="../Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
                     <li><img src="../Images/phone.png" alt="Phone">+353 89 202 6305</li>
-                    <li><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</li>
+                    <li><a href="mailto:sontakemihir@gmail.com" style="color: #B2BEB5"><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                 </ul>
             </div>
         </div>
         <p>&copy; 2024 Mihir Sontake - All rights reserved.</p>
         <div class="up-arrow-container">
-            <a href="#">
-                <img src="../Images/uparrow.png" alt="Scroll to top">
-            </a>
+            <button onclick="scrollToTop()"><img src="../Images/uparrow.png" alt="Scroll to top"></button>
         </div>
     </footer>
+    <script src="../Javascript/script.js"></script>
 </body>
 </html>
