--- a/Pages/portfolio.html
+++ b/Pages/portfolio.html
@@ -113,16 +113,15 @@
                     <li><a href="https://github.com/mihson95/" target="_blank"><img src="../Images/git.png" alt="GitHub"></a></li>
                     <li><img src="../Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
                     <li><img src="../Images/phone.png" alt="Phone">+353 89 202 6305</li>
-                    <li><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</li>
+                    <li><a href="mailto:sontakemihir@gmail.com" style="color: #B2BEB5"><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                 </ul>
             </div>
         </div>
         <p>&copy; 2024 Mihir Sontake - All rights reserved.</p>
         <div class="up-arrow-container">
-            <a href="#">
-                <img src="../Images/uparrow.png" alt="Scroll to top">
-            </a>
+            <button onclick="scrollToTop()"><img src="../Images/uparrow.png" alt="Scroll to top"></button>
         </div>
+        <script src="../Javascript/script.js"></script>
     </footer>
 </body>
 </html>
