map styling for mobile screen

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer>
         <div class = "contact_two_columns">
             <div class = "google_maps_column">
-                <li id = "map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2418.938559774907!2d-8.56862602405727!3d52.679147272103314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b5e911909412d%3A0xaf312b08d99b2334!2sApartment%205%2C%20Heather%2C%20Cappavilla%20Student%20Village%2C%20Garraun%2C%20Limerick%2C%20Co.%20Clare!5e0!3m2!1sen!2sie!4v1712107550663!5m2!1sen!2sie" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+                <iframe id = "map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2418.938559774907!2d-8.56862602405727!3d52.679147272103314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b5e911909412d%3A0xaf312b08d99b2334!2sApartment%205%2C%20Heather%2C%20Cappavilla%20Student%20Village%2C%20Garraun%2C%20Limerick%2C%20Co.%20Clare!5e0!3m2!1sen!2sie!4v1712107550663!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="contact_info_column">   
                 <ul>
