--- a/Pages/education.html
+++ b/Pages/education.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Contact Me</h1>
+        <h1>Education</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
