latest 1 page resume

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -72,12 +72,8 @@
                 <section class="project">
                     <h2 id = "resumes">Resumes</h2>
                     <ul>
-                        <li><p style="text-decoration: underline;"><a href="http://tinyurl.com/4rwuy3wx">1 Page Resume</a></p>
+                        <li><p style="text-decoration: underline;"><a href="https://drive.google.com/file/d/1NvO5TOen_xH_weovxNb7uOhBOEaac0w9/view?usp=sharing">1 Page Resume</a></p>
                             <object class="pdf" data="../Documents/Page_1_Resume.pdf" >
-                            </object>
-                        </li>
-                        <li><p style="text-decoration: underline;"><a href="https://drive.google.com/file/d/1BQUDdUFAEPRCmnvt6kUlz4IEHwH8RTPs/view?usp=sharing&usp=embed_facebook&usp=embed_facebook">2 Page Resume</a></p>
-                            <object class="pdf" data="../Documents/Page_2_Resume.pdf" >
                             </object>
                         </li>
                     </ul>    
