--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
             <h2>Welcome to my Website.</h2>
             <h2>I'm Mihir Sontake</h2>
             <p>I'm currently a Student of Masters of Science in Software Engineering and Data Analytics at University of Limerick. I was a Senior Java Developer in my last organisation. I have over 4.5 years of experience in developing software for large-scale systems. Currently based in Limerick, Ireland.</p>
+            <p>Organisations I have worked for:</p>
+            <ul>
+                <li><a href="https://www.citigroup.com/global">Citigroup</a> as a Technology Analyst</li>
+                <li><a href="https://rosmertatech.com/overview.html">Rosmerta Technologies</a> as a Senior Java Developer</li>
+                <li><a href="https://ul.ie">University of Limerick</a> as a Graduate Teaching Assistant</li>
+                <li><a href="https://ictlc.ul.ie/">ICT Learning Centre</a> as a ICT Tutor</li>
+            </ul>
+            <p>Educated at the <a href="https://www.iitm.ac.in/">Indian Institite of Technology Madras</a> with a Bachelor of Technology Degree.</p>
+            <p>Currently working with <a href="https://bds.ul.ie/members/kshirsagar.html">Dr. Meghana Kshirsagar</a>. Associated with Department of <a href="https://www.ul.ie/scieng/schools-and-departments/department-computer-science-and-information-systems">Computer Science and Information Systems, University of Limerick.</a></p>
             <p>To go to my expertise in skills <a href="Pages/about.html#skills">click here!</a></p>
-            <p>To go to my work experience <a href = "Pages/resume.html#experience">click here!</a></p>
-            <p>To access my resumes (1 page and 2 page) <a href = "Pages/about.html#resumes">click here!</a></p>
+            <p>To check my interests in technology <a href="Pages/about.html#interests">click here!</a></p>
             <p>For any job opportunities recruiters can <a href= "Pages/contact.html">contact me!</a></p>
         </section>
     </div>
@@ -42,15 +50,12 @@
     </main>
     <footer>
         <div class = "contact_two_columns">
-            <div class = "google_maps_column">
-                <iframe id = "map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2418.938559774907!2d-8.56862602405727!3d52.679147272103314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b5e911909412d%3A0xaf312b08d99b2334!2sApartment%205%2C%20Heather%2C%20Cappavilla%20Student%20Village%2C%20Garraun%2C%20Limerick%2C%20Co.%20Clare!5e0!3m2!1sen!2sie!4v1712107550663!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+            
             <div class="contact_info_column">   
                 <ul>
                     <li><a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank"><img src="Images/lin.png" alt = "LinkedIn"></a></li>
                     <li><a href="https://github.com/mihson95/" target="_blank"><img src="Images/git.png" alt="GitHub"></a></li>
-                    <li><img src="Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
-                    <li><img src="Images/phone.png" alt="Phone">+353 89 202 6305</li>
+                    <li><img src="Images/pin.png" alt="Address">University of Limerick, Limerick, Ireland</li>
                     <li><a href="mailto:sontakemihir@gmail.com" style="color: #B2BEB5"><img src="Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                 </ul>
             </div>
