--- a/Pages/education.html
+++ b/Pages/education.html
@@ -31,8 +31,8 @@
             <section class="project">
                 <div class="two-columns-education">
                     <div class="column-institute-name">
-                        <h3>University Of Limerick (UL)</h3>
-                        <h3>Master of Science (M.Sc) in Software Engineering 2023-2024</h3>
+                        <h4><a href="https://www.ul.ie/">University Of Limerick (UL)</a></h4>
+                        <h4>Master of Science (M.Sc) in Software Engineering</h4>
                         <p>Software Engineering, Data Analytics</p>
                     </div>
                     <div class="column-institute-logo">
@@ -43,8 +43,8 @@
             <section class="project">
                 <div class="two-columns-education">
                     <div class="column-institute-name">
-                        <h3>Indian Institute of Technology Madras (IITM)</h3>
-                        <h3>Bachelor of Technology (B.Tech) 2013 -2017</h3>
+                        <h4><a href="https://www.iitm.ac.in/">Indian Institute of Technology Madras (IITM)</a></h4>
+                        <h4>Bachelor of Technology (B.Tech)</h4>
                     </div>
                     <div class="column-institute-logo">
                         <img src="../Images/iitm.png">
@@ -56,14 +56,11 @@
     </main>
     <footer>
         <div class = "contact_two_columns">
-            <div class = "google_maps_column">
-                <iframe id = "map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2418.938559774907!2d-8.56862602405727!3d52.679147272103314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b5e911909412d%3A0xaf312b08d99b2334!2sApartment%205%2C%20Heather%2C%20Cappavilla%20Student%20Village%2C%20Garraun%2C%20Limerick%2C%20Co.%20Clare!5e0!3m2!1sen!2sie!4v1712107550663!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
             <div class="contact_info_column">   
                 <ul>
                     <li><a href="https://www.linkedin.com/in/mihir-sontake/" target="_blank"><img src="../Images/lin.png" alt = "LinkedIn"></a></li>
                     <li><a href="https://github.com/mihson95/" target="_blank"><img src="../Images/git.png" alt="GitHub"></a></li>
-                    <li><img src="../Images/pin.png" alt="Address">Heather House, Cappavilla Village, University of Limerick, Limerick, Ireland</li>
-                    <li><img src="../Images/phone.png" alt="Phone">+353 89 202 6305</li>
+                    <li><img src="../Images/pin.png" alt="Address">University of Limerick, Limerick, Ireland</li>
                     <li><a href="mailto:sontakemihir@gmail.com" style="color: #B2BEB5"><img src="../Images/email.png" alt="Email">sontakemihir@gmail.com</a></li>
                 </ul>
             </div>
