--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -31,7 +31,7 @@
             <section class="project">
                 <h2>Contact Me</h2>
                 <p>I am interested in learning about new opportunities to work as a software developer in organisations where I can meaningfully contribute. I am actively exploring opportunities in Ireland and the rest of Europe. I specialise in Backend Development in Java and Spring Boot especially creating REST APIs.</p>
-                <p>Feel free to connect with me if you think I can contribute meaningfully to your organisation, based out of Ireland (remote or on-site), any country in the European Union (remote or on-site), or the United States of America.</p>
+                <p>Drop me an email at <a href="mailto:sontakemihir@gmail.com">sontakemihir@gmail.com</a> if you think I can contribute meaningfully to your organisation, based out of Ireland (remote or on-site), any country in the European Union (remote or on-site), or the United States of America.</p>
             </section>
         </div>
     </div>
