--- a/Pages/resume.html
+++ b/Pages/resume.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Education</h1>
+        <h1>Resume/CV</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -23,8 +23,6 @@
         </nav>
     </header>
     <main>
-        
-    </main>
         <div class="circle-container">
             <img src="../Images/Profile.jpg" alt="My Picture" class="profile-picture">
         </div>
@@ -36,7 +34,8 @@
                 </section>
             
             </div>
-        </div>        
+        </div>
+    </main>      
     <footer>
         <div class = "contact_two_columns">
             <div class="contact_info_column">   
