--- a/Pages/education.html
+++ b/Pages/education.html
@@ -36,7 +36,7 @@
                         <p>Software Engineering, Data Analytics</p>
                     </div>
                     <div class="column-institute-logo">
-                        <img src="../Images/ul.jpg">
+                        <a href="https://www.ul.ie/"><img src="../Images/ul.jpg"></a>
                     </div>
                 </div>
             </section>
@@ -47,7 +47,7 @@
                         <h4>Bachelor of Technology (B.Tech)</h4>
                     </div>
                     <div class="column-institute-logo">
-                        <img src="../Images/iitm.png">
+                        <a href="https://www.iitm.ac.in/"><img src="../Images/iitm.png"></a>
                     </div>
                 </div>
             </section>
